# vaportrail

./: .dockerignore  .gitignore  Dockerfile  go.mod  go.sum  test_output.txt  vaportrail.db.bak
.github/workflows/: docker-build-rust.yml  docker-build.yml  docker-pr.yml  docker-publish.yml
cmd/vaportrail/: main.go
internal/config/: config.go  config_test.go
internal/db/: benchmark_test.go  migrations_test.go  retention_deletion_test.go  storage.go  storage_test.go  tdigest_utils.go
internal/db/migrations/: 000001_init.down.sql  (+14 more)
internal/probe/: ping_benchmark_test.go  ping_timestamp_darwin.go  ping_timestamp_linux.go  probe.go  probe_test.go
internal/scheduler/: mocks_test.go  retention.go  retention_test.go  rollup.go  rollup_test.go  scheduler.go  scheduler_test.go
internal/web/: server.go  server_test.go
migrations/: 000001_init.up.sql  000002_drop_stddev.up.sql  000004_drop_commit_interval.down.sql  000004_drop_commit_interval.up.sql  000005_default_retention_policies.down.sql
src/: config.rs
src/db/: mod.rs  store.rs
src/probe/: http.rs  mod.rs  ping.rs
src/scheduler/: mod.rs  rollup.rs
vaportrail-rs/: Cargo.toml  Dockerfile
vaportrail-rs/migrations/: 000002_drop_stddev.down.sql  000003_raw_and_rollups.down.sql
vaportrail-rs/src/: main.rs
vaportrail-rs/src/db/: models.rs  store.rs  tdigest_utils.rs
vaportrail-rs/src/probe/: dns.rs  ping.rs
vaportrail-rs/src/scheduler/: retention.rs  rollup.rs
vaportrail-rs/src/web/: handlers.rs  mod.rs
vaportrail-rs/src/web/templates/: dashboard.html  graph.html  layout.html
(+9 files in other folders)
