[package]
name = "vaportrail"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for probes
reqwest = { version = "0.12", features = ["json"] }

# TDigest for percentile statistics
tdigest = "0.2"

# Templating
askama = "0.12"
askama_axum = "0.4"

# ICMP for ping
socket2 = { version = "0.5", features = ["all"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
regex = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Embed files
rust-embed = "8"
mime_guess = "2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
